--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Missive Documentation
+title: Missive Help Centre
 description: > # this means to ignore newlines until "baseurl:"
   This is the documentation for the Missive form-to-email service.
 baseurl: "" # the subpath of your site, e.g. /blog
